fix dark mode colors

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 300ms ease-in-out;
+  transition: all 100ms ease-in-out;
 }
 
 html {
